--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             padding: 50px;
             background-color: #f4f4f4;
         }
+        .header img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            margin-bottom: 20px;
+        }
         .content {
             max-width: 800px;
             margin: auto;
@@ -29,6 +35,8 @@
 </head>
 <body>
     <div class="header w3-card-4">
+        <!-- Add your profile picture here -->
+        <img src="IMG_2699.JPG" alt="Patient Tuyishime's Profile Picture">
         <h1>Welcome to Patient Tuyishime's GitHub Home Page</h1>
         <p>This is a simple webpage hosted with GitHub Pages.</p>
     </div>
