--- a/index.html
+++ b/index.html
@@ -7,29 +7,65 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
         }
         .header {
             text-align: center;
             padding: 50px;
-            background-color: #f4f4f4;
+            background: linear-gradient(135deg, #4caf50, #81c784);
+            color: white;
         }
         .header img {
             width: 150px;
             height: 150px;
             border-radius: 50%;
             margin-bottom: 20px;
+            border: 4px solid white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
         .content {
             max-width: 800px;
-            margin: auto;
+            margin: 20px auto;
             padding: 20px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .content h2 {
+            color: #4caf50;
+            border-bottom: 2px solid #81c784;
+            padding-bottom: 5px;
+            margin-bottom: 20px;
+        }
+        .content ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .content ul li {
+            margin: 10px 0;
+        }
+        .content ul li a {
+            color: #4caf50;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s;
+        }
+        .content ul li a:hover {
+            color: #388e3c;
         }
         footer {
             text-align: center;
-            margin-top: 50px;
-            padding: 10px;
-            background-color: #f4f4f4;
+            padding: 20px;
+            background-color: #4caf50;
+            color: white;
+            margin-top: 30px;
+        }
+        footer p {
+            margin: 0;
         }
     </style>
 </head>
@@ -44,7 +80,7 @@
     <div class="content">
         <h2>About Me</h2>
         <p>Hello! My name is Patient Tuyishime. I am a passionate web developer and a senior student at Midway University. I love creating beautiful and functional web applications!</p>
-        <p>In addition to web development, I have played soccer for Midway University, which has taught me teamwork, discipline, and leadership skills.</p>
+        <p> Besides web development, I have played soccer for Midway University, which has taught me teamwork, discipline, and leadership skills.</p>
         
         <h2>Projects</h2>
         <ul>
