--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <div class="header w3-card-4">
         <!-- Add your profile picture here -->
         <img src="IMG_2699.JPG" alt="Patient Tuyishime's Profile Picture">
-        <h1>Welcome to Patient Tuyishime's GitHub Home Page</h1>
-        <p>This is a simple webpage hosted with GitHub Pages.</p>
+        <h1>Welcome to My GitHub Home Page</h1>
+       
     </div>
     
     <div class="content">
