--- a/index.html
+++ b/index.html
@@ -7,30 +7,74 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
         }
         .header {
             text-align: center;
             padding: 50px;
-            background-color: #f4f4f4;
+            background: linear-gradient(135deg, #4caf50, #81c784);
+            color: white;
+        }
+        .header img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            margin-bottom: 20px;
+            border: 4px solid white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
         .content {
             max-width: 800px;
-            margin: auto;
+            margin: 20px auto;
             padding: 20px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .content h2 {
+            color: #4caf50;
+            border-bottom: 2px solid #81c784;
+            padding-bottom: 5px;
+            margin-bottom: 20px;
+        }
+        .content ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .content ul li {
+            margin: 10px 0;
+        }
+        .content ul li a {
+            color: #4caf50;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s;
+        }
+        .content ul li a:hover {
+            color: #388e3c;
         }
         footer {
             text-align: center;
-            margin-top: 50px;
-            padding: 10px;
-            background-color: #f4f4f4;
+            padding: 20px;
+            background-color: #4caf50;
+            color: white;
+            margin-top: 30px;
+        }
+        footer p {
+            margin: 0;
         }
     </style>
 </head>
 <body>
     <div class="header w3-card-4">
-        <h1>Welcome to Patient Tuyishime's GitHub Home Page</h1>
-        <p>This is a simple webpage hosted with GitHub Pages.</p>
+        <!-- Add your profile picture here -->
+        <img src="IMG_2699.JPG" alt="Patient Tuyishime's Profile Picture">
+        <h1>Welcome to My GitHub Home Page</h1>
+        
     </div>
     
     <div class="content">
