--- a/index.html
+++ b/index.html
@@ -80,9 +80,7 @@
     
     <div class="content">
         <h2>About Me</h2>
-        <p>Hello! My name is Patient Tuyishime. I am a passionate web developer and a senior student at Midway University. I love creating beautiful and functional web applications!</p>
-
-        <p> Besides web development, I have played soccer for Midway University, which has taught me teamwork, discipline, and leadership skills.</p>
+        <p>Hello! My name is Patient Tuyishime. I am a passionate web developer and a senior student at Midway University. I'm majoring in Computer Science and minoring in Business Administration.  I love creating beautiful and functional web applications!</p>
 
         <p> Besides web development, I have played soccer for Midway University, which has taught me teamwork, discipline, and leadership skills.</p>
 
