--- a/index.html
+++ b/index.html
@@ -1,138 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Patient Tuyishime's GitHub Home Page</title>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-            color: #333;
-        }
-        .header {
-            text-align: center;
-            padding: 50px;
-            background: linear-gradient(135deg, #4caf50, #81c784);
-            color: white;
-        }
-        .header img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            margin-bottom: 20px;
-            border: 4px solid white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-        .content {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .content h2 {
-            color: #4caf50;
-            border-bottom: 2px solid #81c784;
-            padding-bottom: 5px;
-            margin-bottom: 20px;
-        }
-        .content ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        .content ul li {
-            margin: 10px 0;
-        }
-        .content ul li a {
-            color: #4caf50;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s;
-        }
-        .content ul li a:hover {
-            color: #388e3c;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #4caf50;
-            color: white;
-            margin-top: 30px;
-        }
-        footer p {
-            margin: 0;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Patient's Resume</title>
+  <link rel="stylesheet" href="resume.css">
 </head>
 <body>
-    <div class="header w3-card-4">
-        <img src="IMG_2699.JPG" alt="Patient Tuyishime's Profile Picture">
-        <h1>Welcome to My GitHub Home Page</h1>
-    </div>
-    
-    <div class="content">
-        <h2>About Me</h2>
-        <p>Hello! My name is Patient Tuyishime. I am a passionate web developer and a senior student at Midway University. I'm majoring in Computer Science and minoring in Business Administration. I love creating beautiful and functional web applications!</p>
+  <main class="container">
+    <section class="header">
+      <h1>Patient Tuyishime</h1>
+      <P class="contact">
+        Email:
+        <a href="mailto:patienttuyishime@gmail.com">patienttuyishime@gmail.com</a>
+        Phone: (859) 202-8875 | LinkedIn
+        <a href="https://www.linkedin.com/in/patient-tuyishime-7b2825328/" target="_blank">Patient Tuyishime</a>
+      </P>
+    </section>
+    <section class="section">
+      <h2>Summary</h2>
+      <p>
+          A brief summary about yourself, your skills, and what you
+          bring to the table. Keep it concise and impactful.
+      </p>
+  </section>
+  <section class="section">
+      <h2>Work Experience</h2>
+      <div class="item">
+          <h3>Job Title - Company Name</h3>
+          <p>Dates of Employment</p>
+          <p>
+              Brief description of your responsibilities and
+              achievements in this role.
+          </p>
+      </div>
+      <div class="item">
+          <h3>Job Title - Company Name</h3>
+          <p>Dates of Employment</p>
+          <p>
+            Hello! My name is Patient Tuyishime. I am a passionate web developer and a senior student at Midway University. I'm majoring in Computer Science and minoring in Business Administration. I love creating beautiful and functional web applications!
 
-        <p>Besides web development, I have played soccer for Midway University, which has taught me teamwork, discipline, and leadership skills. I am also a caregiver at Comfortable Living Nursing Home, where I provide compassionate care to individuals with brain injuries.</p>
-
-        <h2>Work Experience</h2>
-        <ul>
-            <li><strong>Caregiver</strong> – Comfortable Living Nursing Home, Lexington, KY (March 2022 – Present)
-                <ul>
-                    <li>Provided compassionate care for individuals with brain injuries, assisting with daily activities such as bathing, dressing, and preparing meals.</li>
-                    <li>Administered prescribed medications accurately and on schedule, ensuring patient safety and adherence to care plans.</li>
-                    <li>Monitored patients' physical and emotional well-being, promptly reporting any changes to healthcare professionals.</li>
-                    <li>Collaborated with healthcare teams and families to deliver personalized care plans and communicate clearly.</li>
-                </ul>
-            </li>
-        </ul>
-
-        <h2>Awards</h2>
-        <ul>
-            <li>RSC Men's Soccer Scholar-Athlete All-Conference Team – Achieved recognition in all semesters for outstanding academic and athletic performance.</li>
-        </ul>
-
-        <h2>Skills</h2>
-        <ul>
-            <li><strong>Programming Languages:</strong> HTML, CSS, JavaScript</li>
-            <li><strong>Tools & Software:</strong> Microsoft Word, Excel, PowerPoint</li>
-            <li>Strong organizational and problem-solving skills</li>
-            <li>Effective communication and teamwork abilities</li>
-        </ul>
-
-        <h2>Athletic Experience</h2>
-        <ul>
-            <li><strong>Player, Soccer</strong> – Midway University, Midway, KY (2020 – Present)
-                <ul>
-                    <li>Demonstrated strong teamwork, discipline, and leadership both on and off the field.</li>
-                    <li>Competed in matches representing the university, consistently showing commitment, sportsmanship, and dedication.</li>
-                    <li>Balanced academic responsibilities with athletic commitments, showcasing time management and organizational skills.</li>
-                </ul>
-            </li>
-        </ul>
-
-        <h2>Projects</h2>
-        <ul>
-            <li><a href="https://zesty-madeleine-d620f4.netlify.app/" target="_blank">Zesty Madeleine Project</a></li>
-        </ul>
-
-        <h2>Connect with Me</h2>
-        <ul>
-            <li><a href="https://www.linkedin.com/in/patient-tuyishime-7b2825328/" target="_blank">LinkedIn</a></li>
-            <li><a href="https://github.com/patient031" target="_blank">GitHub</a></li>
-            <li>Email: <a href="mailto:patienttuyishime@gmail.com">patienttuyishime@gmail.com</a></li>
-            <li>Phone: <a href="tel:8592028875">859-202-8875</a></li>
-        </ul>
-    </div>
-    
-    <footer>
-        <p>© 2025 Patient Tuyishime. All rights reserved.</p>
-    </footer>
+            Besides web development, I have played soccer for Midway University, which has taught me teamwork, discipline, and leadership skills. I am also a caregiver at Comfortable Living Nursing Home, where I provide compassionate care to individuals with brain injuries.
+          </p>
+      </div>
+  </section>
+  <div class="section">
+      <h2>Education</h2>
+      <div class="item">
+          <h3>Pursuing Bacholor's Degree at Midway University</h3>
+          <p>Will attain My Bacholor's Degree in May 2025.</p>
+      </div>
+  </section>
+  <section class="section">
+      <h2>Skills</h2>
+      <div class="skills">
+          <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>Python</li>
+              <li>Team Leadership</li>
+          </ul>
+      </div>
+  </section>
+  <section class="section">
+      <h2>Projects</h2>
+      <div class="item">
+          <h3><a href="https://zesty-madeleine-d620f4.netlify.app/" target="_blank">ThunderStrykers Soccer Team</a></h3>
+          <p>
+            A simple and responsive website for a soccer team based in Lexington, Kentucky. Built using <strong>html</strong>, <strong>css</strong>, and <strong>JavaScript</strong>, the site includes a homepage, team roster, match schedule, and a contact section. CSS is used for styling and layout, while JavaScript adds interactivity, such as dynamic updates to match scores or a gallery slider. The project showcases front-end web development skills, including responsive design and user interaction.
+          </p>
+      </div>
+      <div class="item">
+          <h3><a href="https://github.com/patient031/odin-recipes-" target="_blank">Recipes</a></h3>
+          <p>
+            A simple recipe website built using <strong>html</strong>. It includes a homepage with links to two detailed recipe pages. The design is structured with headings, lists, and images to enhance readability. 
+      </div>
+  </section>
+  </main>
+  <footer>
+    <p>© 2025 Patient Tuyishime. All rights reserved.</p>
+</footer>
 </body>
 </html>
