--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="section">
       <h2>Summary</h2>
       <p>
-        Passionate web developer and senior Computer Science student at Midway University, minoring in Business Administration.
+        I am a passionate web developer and a senior Business Administration student at Midway University.
         Skilled in HTML, CSS, JavaScript, and Python. Experienced in leadership, teamwork, and caregiving.
       </p>
     </section>
