--- a/project.html
+++ b/project.html
@@ -3,32 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Patient's Projects</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <main class="container">
         <header>
             <h1>My Projects</h1>
-            <nav>
+            <nav class="nav">
                 <a href="index.html">Home</a>
+                <a href="resume.html">Resume</a>
             </nav>
         </header>
         <section class="section">
-            <h2>Projects</h2>
-            <div class="item">
+            <div class="project-item" id="pricing-table">
                 <h3><a href="https://github.com/Code-You-Projects/Pricing_table-" target="_blank">Pricing Table</a></h3>
                 <p>A responsive pricing table showcasing different service plans with a clean design. Built using HTML, CSS, and JavaScript for interactive elements.</p>
             </div>
-            <div class="item">
+            <div class="project-item" id="pomodoro">
                 <h3><a href="https://github.com/patient031/Pomodoro-Timer" target="_blank">Pomodoro Timer</a></h3>
                 <p>A productivity timer implementing the Pomodoro technique. Features customizable work and break intervals using JavaScript for dynamic updates.</p>
             </div>
-            <div class="item">
-              <h3><a href="https://github.com/patient031/Rock_Paper_Scissor_Game" target="_blank">Rock_Paper_Scissor_Game</a></h3>
-              <p>A simple Rock Paper Scissors game that can be played in the browser console. Built using JavaScript for game logic.</p>
-          </div>
+            <div class="project-item">
+                <h3><a href="https://github.com/patient031/Rock_Paper_Scissor_Game" target="_blank">Rock Paper Scissors Game</a></h3>
+                <p>A simple Rock Paper Scissors game that can be played in the browser console. Built using JavaScript for game logic.</p>
+            </div>
         </section>
     </main>
+    <footer>
+        <p>&copy; 2025 Patient Tuyishime. All rights reserved.</p>
+    </footer>
 </body>
 </html>
