add css folder and resume.html

--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
                 <a href="projects.html">Projects</a>
             </nav>
             <p class="contact">
-                Email: <a href="mailto:patienttuyishime@gmail.com">patienttuyishime@gmail.com</a> |
+                Email: <a href="mailto:patienttuyishime@gmail.com">patienttuyishime@gmail.com</a>
                 Phone: (859) 202-8875 |
                 LinkedIn: <a href="https://www.linkedin.com/in/patient-tuyishime-7b2825328/" target="_blank">Patient Tuyishime</a>
             </p>
