--- a/index.html
+++ b/index.html
@@ -5,53 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patient Tuyishime - Portfolio</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <main class="container">
-    <section class="header">
-      <h1>Patient Tuyishime</h1>
-      <p class="contact">
-        Email: <a href="mailto:patienttuyishime@gmail.com">patienttuyishime@gmail.com</a> |
-        Phone: (859) 202-8875 |
-        LinkedIn: <a href="https://www.linkedin.com/in/patient-tuyishime-7b2825328/" target="_blank">Patient Tuyishime</a>
-      </p>
-    </section>
-    
-    <section class="section">
-      <h2>Summary</h2>
-      <p>
-        Passionate web developer and senior Computer Science student at Midway University, minoring in Business Administration.
-        Skilled in HTML, CSS, JavaScript, and Python. Experienced in leadership, teamwork, and caregiving.
-      </p>
-    </section>
-
-        <section class="featured-projects">
-            <h2>Featured Projects</h2>
-            <div class="project-grid">
-                <article class="project-card">
-                    <h3>Pricing Table</h3>
-                    <p>Responsive pricing component with toggle animation</p>
-                    <a href="projects.html#pricing-table">View Project</a>
-                </article>
-                <article class="project-card">
-                    <h3>Pomodoro Timer</h3>
-                    <p>Productivity timer with custom intervals</p>
-                    <a href="projects.html#pomodoro">View Project</a>
-                </article>
+    <main class="container">
+        <header class="hero">
+            <div class="hero-content">
+                <h1>Patient Tuyishime</h1>
+                <p class="hero-subtitle">Web Developer & Business Student</p>
+                <nav class="nav">
+                    <a href="resume.html" class="nav-link">Resume</a>
+                    <a href="project.html" class="nav-link">Projects</a>
+                    <a href="#contact" class="nav-link">Contact</a>
+                </nav>
             </div>
+        </header>
+
+        <section class="section about">
+            <h2 class="section-title">About Me</h2>
+            <p class="about-text">A passionate web developer currently pursuing a Business Administration degree at Midway University. Specializing in creating responsive, user-friendly web experiences with modern technologies.</p>
         </section>
 
-        <section id="contact" class="contact">
-            <h2>Get in Touch</h2>
-            <div class="contact-info">
-                <p><a href="mailto:patienttuyishime@gmail.com">patienttuyishime@gmail.com</a></p>
-                <p>(859) 202-8875</p>
-                <p></p><a href="https://www.linkedin.com/in/patient-tuyishime-7b2825328/" target="_blank">LinkedIn Profile</a></p>
-            </div>
-        </section>
+     <section id="contact" class="section contact">
+    <h2 class="section-title">Get in Touch</h2>
+    <div class="contact-content">
+        <div class="contact-item">
+            <svg class="contact-icon" viewBox="0 0 24 24" width="28" height="28">
+                <path fill="currentColor" d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H4V8l8 5 8-5v10zm-8-7L4 6h16l-8 5z"/>
+            </svg>
+            <a href="mailto:patienttuyishime@gmail.com" class="contact-link">patienttuyishime@gmail.com</a>
+        </div>
+        <div class="contact-item">
+            <svg class="contact-icon" viewBox="0 0 24 24" width="28" height="28">
+                <path fill="currentColor" d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
+            </svg>
+            <a href="tel:8592028875" class="contact-link">(859) 202-8875</a>
+        </div>
+        <div class="contact-item">
+            <svg class="contact-icon" viewBox="0 0 24 24" width="28" height="28">
+                <path fill="currentColor" d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+            </svg>
+            <a href="https://linkedin.com/in/patient-tuyishime" target="_blank" class="contact-link">LinkedIn Profile</a>
+        </div>
+    </div>
+</section>
     </main>
-    <footer>
-        <p>&copy; 2025 Patient Tuyishime. All rights reserved.</p>
+    <footer class="footer">
+        <p class="footer-text">© 2024 Patient Tuyishime. All rights reserved.</p>
     </footer>
 </body>
 </html>
